--- a/src/recipe-forms.html
+++ b/src/recipe-forms.html
@@ -35,7 +35,7 @@
         </template>
 
         <template is="dom-if" if="[[is_admin(userRole)]]">
-            <user-form id="create_user_form" title="Create user"></user-form>
+            <user-form id="create_user_form" title="Create User"></user-form>
             <user-form id="edit_user_form"></user-form>
         </template>
     </template>
