--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -280,7 +280,7 @@
     </app-scrollpos-control>
 
     <!-- All the application's forms are contained in here and triggered with
-         iron-signals. This is a workaround for:
+         signals. This is a workaround for:
          https://github.com/PolymerElements/iron-overlay-behavior/issues/208#issuecomment-234024428
     -->
     <recipe-forms user-role="[[user_role]]"></recipe-forms>
