--- a/src/recipe-forms.html
+++ b/src/recipe-forms.html
@@ -4,11 +4,10 @@
 -->
 <!--
     This module contains all the application's forms. They are triggered
-     with iron-signals. This is a workaround for:
+     with signals. This is a workaround for:
      https://github.com/PolymerElements/iron-overlay-behavior/issues/208#issuecomment-234024428
 -->
 
-<link rel="import" href="../bc/iron-signals/iron-signals.html">
 <link rel="import" href="../bc/polymer/polymer.html">
 
 <link rel="import" href="global-behavior.html">
@@ -21,8 +20,6 @@
 
 <dom-module id="recipe-forms">
     <template>
-        <iron-signals on-iron-signal-open-form="open_form"></iron-signals>
-
         <template is="dom-if" if="[[is_user(userRole)]]">
             <recipe-form id="create_recipe_form" title="Create Recipe">
             </recipe-form>
@@ -68,28 +65,38 @@
                     // all here.
                     "closed": "dialog_closed",
                 },
+                attached: function() {
+                    // Listen for requests to open forms.
+                    this._listener = this.open_form.bind(this);
+                    window.addEventListener("open-form", this._listener);
+                },
+                // Remove listeners to avoid memory leaks.
+                detached: function() {
+                    window.removeEventListener("open-form", this._listener);
+                },
                 // On close, notify the element that asked for the form.
                 dialog_closed: function(e, reason) {
                     if (this.dialog_parent)
                         this.dialog_parent[this.dialog_callback](e, reason);
                 },
-                // Open whichever form was requested by iron-signals.
-                open_form: function(e, data) {
+                // Open whichever form was requested by the signal.
+                open_form: function(e) {
                     // Save a reference to the element that sent the request so
                     // we can tell it when the form closes.
-                    this.dialog_parent = data.that;
+                    this.dialog_parent = e.detail.that;
                     // If the sender requests a special callback, use it.
                     // Otherwise, use "resolve_dialog".
-                    this.dialog_callback = data.callback ? data.callback :
+                    this.dialog_callback = e.detail.callback ? e.detail.callback :
                             "resolve_dialog";
                     // If any of these properties are given from the signal,
                     // assign them to the form. This prevents needing a large
                     // switch to set up each form.
                     var props = [ "recipe", "user" ];
                     props.forEach(p => {
-                        if (data[p]) this.$$("#" + [data.name])[p] = data[p];
+                        if (e.detail[p])
+                            this.$$("#" + [e.detail.name])[p] = e.detail[p];
                     });
-                    this.$$("#" + [data.name]).open();
+                    this.$$("#" + [e.detail.name]).open();
                 },
             });
         })();
